Button: additional class property
Mostly used for spacing

--- a/index-raw.html
+++ b/index-raw.html
@@ -26,9 +26,9 @@
                                 <h5 class="my-4">I - Basic Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
                           <div class='button-border'>
-          <a href='javascript:;' class='button' id=' button_dynamic-button'>Dynamic button</a>
+          <a href='javascript:;' class='button ' id=' button_dynamic-button'>Dynamic button</a>
   </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = "button_".format($label), string $href = "javascript:;"
+        <pre><code class="language-php">// optional params: string $id = "button_".format($label), string $href = "javascript:;", string $class = ""
 echo Button(label: "Dynamic button");</code></pre>
 </div>
                                 <h5 class="my-4">II - Container Components</h5>
