Button: onclick property

--- a/index-raw.html
+++ b/index-raw.html
@@ -26,9 +26,9 @@
                                 <h5 class="my-4">I - Basic Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
                           <div class='button-border'>
-          <a href='javascript:;' class='button ' id=' button_dynamic-button'>Dynamic button</a>
+          <a href='javascript:;' class='button ' id=' button_dynamic-button' >Dynamic button</a>
   </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = "button_".format($label), string $href = "javascript:;", string $class = ""
+        <pre><code class="language-php">/* optional params: string $id = "button_".format($label), string $href = "javascript:;", string $class = "", string $onclick = null */
 echo Button(label: "Dynamic button");</code></pre>
 </div>
                                 <h5 class="my-4">II - Container Components</h5>
@@ -42,7 +42,7 @@ echo Button(label: "Dynamic button");</code></pre>
                 <input class='range-slider__range' id='range-slider_dynamic-slider' type='range' min='0' max='100' step='0.1' value='0'>
                 <span class='range-slider__value'>0</span>
         </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = "slider_".format($label), float $min = $value = 0, float $step = 0.1
+        <pre><code class="language-php">/* optional params: string $id = "slider_".format($label), float $min = $value = 0, float $step = 0.1 */
 echo RangeSlider(label: "Dynamic slider",  max: 100);
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
@@ -59,7 +59,7 @@ echo RangeSlider(label: "Dynamic slider",  max: 100);
                 <span class='text'>Radio 2</span>
         </label>
 </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = "radio_".format($label), bool $checked = false        
+        <pre><code class="language-php">/* optional params: string $id = "radio_".format($label), bool $checked = false  */            
 echo Radio(label: "Radio 1", value: 1, group: "group-1");
 echo Radio(label: "Radio 2", value: 2, group: "group-1", checked: true);
 </code></pre>
@@ -71,7 +71,7 @@ echo Radio(label: "Radio 2", value: 2, group: "group-1", checked: true);
         </div>
         <div class="label-text">Dynamic toggle</div>
 </label>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = $name = "toggle_".format($label), float $value = 0
+        <pre><code class="language-php">/* optional params: string $id = $name = "toggle_".format($label), float $value = 0 */
 echo Toggle(label: "Dynamic toggle");
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
@@ -82,7 +82,7 @@ echo Toggle(label: "Dynamic toggle");
         </label>
         <div class="name">Dynamic checkbox</div>
 </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = $value = "checkbox_".format($name), bool $checked = false  
+        <pre><code class="language-php">/* optional params: string $id = $value = "checkbox_".format($name), bool $checked = false  */
 echo Checkbox(name:"Dynamic checkbox");
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
@@ -102,7 +102,7 @@ echo Checkbox(name:"Dynamic checkbox");
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
 </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional dropdown item keys: "href" =&gt; "javascript:;", "value" = 0
+        <pre><code class="language-php">/* optional dropdown item keys: "href" =&gt; "javascript:;", "value" = 0 */
 echo Dropdown(
   "Dynamic dropdown",
   "dropdown-demo",
