--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -5,7 +5,7 @@
         <title>Dynamic UI Framework</title>
         <meta charset="UTF-8" />
         <meta name="author" content="enginoobz" />
-        <meta name="description" content="Demo page for Dynamic Style Framework" />
+        <meta name="description" content="Demo page for Dynamic UI Framework" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <!-- Preload fonts -->
         <link rel="preload" href="../fonts/agency-fb-regular/AgencyFB-Reg.woff2" as="font" type="font/woff2" crossorigin>
@@ -21,97 +21,22 @@
                         <div class="container ">
                                 <h2 class="text-center p-3 highlight-color">Dynamic UI Framework</h2>
                                 <hr><br>
-                                <div class="code-block">
+                                <div class="code-block ">
         <pre><code class="language-php">&lt;?= include_once "components/_index.php";?&gt;</code></pre>
 </div>
                                 <h5 class="my-4">I - Basic Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
                           <div class='button-border  '>
-          <a href='javascript:;' class='button' id=' button_dynamic-button' >Dynamic button</a>
-  </div>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional params: string $id = "button_".format($label), string $href = "javascript:;", string $class = "", string $onclick = null */
-echo Button(label: "Dynamic button");</code></pre>
+          <a href='javascript:;' class='button'  >Dynamic button</a>
+  </div>        </div><div class="code-block mt-3">
+        <pre><code class="language-php">Button(label: "Dynamic button")-&gt;show();</code></pre>
 </div>
                                 <h5 class="my-4">II - Container Components</h5>
 
                                 <h5 class="my-4">III - Content Components</h5>
 
                                 <h5 class="my-4">IV - Form Components</h5>
-                                <div class=" d-flex justify-content-center flex-row">
-                                <div class='range-slider'>
-                <label for='range-slider_dynamic-slider'>Dynamic slider</label>
-                <input class='range-slider__range' id='range-slider_dynamic-slider' type='range' min='0' max='100' step='0.1' value='0'>
-                <span class='range-slider__value'>0</span>
-        </div>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional params: string $id = "slider_".format($label), float $min = $value = 0, float $step = 0.1 */
-echo RangeSlider(label: "Dynamic slider",  max: 100);
-</code></pre>
-</div><div class=" d-flex justify-content-center flex-row">
-                        <div class='dui-radio'>
-        <input class='state' type='radio'  name='group-1' id='radio_radio-1' value='1'>
-        <label class='label' for='radio_radio-1'>
-                <div class='indicator'></div>
-                <span class='text'>Radio 1</span>
-        </label>
-</div>                        <div class='dui-radio'>
-        <input class='state' type='radio' checked name='group-1' id='radio_radio-2' value='2'>
-        <label class='label' for='radio_radio-2'>
-                <div class='indicator'></div>
-                <span class='text'>Radio 2</span>
-        </label>
-</div>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional params: string $id = "radio_".format($label), bool $checked = false  */            
-echo Radio(label: "Radio 1", value: 1, group: "group-1");
-echo Radio(label: "Radio 2", value: 2, group: "group-1", checked: true);
-</code></pre>
-</div><div class=" d-flex justify-content-center flex-row">
-                        <label class="toggle-label">
-        <div class="toggle" id="toggle_dynamic-toggle">
-                <input class="toggle-state" type="checkbox" name="dynamic-toggle" value="0" />
-                <div class="indicator"></div>
-        </div>
-        <div class="label-text">Dynamic toggle</div>
-</label>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional params: string $id = $name = "toggle_".format($label), float $value = 0 */
-echo Toggle(label: "Dynamic toggle");
-</code></pre>
-</div><div class=" d-flex justify-content-center flex-row">
-                        <div class="checkbox">
-        <input id="checkbox_dynamic-checkbox" type="checkbox"  value="dynamic-checkbox">
-        <label for="checkbox_dynamic-checkbox">
-                <i class="fas fa-check"></i>
-        </label>
-        <div class="name">Dynamic checkbox</div>
-</div>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional params: string $id = $value = "checkbox_".format($name), bool $checked = false  */
-echo Checkbox(name:"Dynamic checkbox");
-</code></pre>
-</div><div class=" d-flex justify-content-center flex-row">
-                        <div class="dropdown" id="dropdown-demo">
-        <button type="button" class="dropdown-label">
-                <p class="scalable">Dynamic dropdown</p>
-        </button>
-        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="fas fa-angle-down dropdown-arrow"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="javascript:;" value="1">Option 1</a>
-                                        <a class="dropdown-item" href="javascript:;" value="2">Option 2</a>
-                                        <a class="dropdown-item" href="javascript:;" value="3">Option 3</a>
-                                <!-- <div class="dropdown-divider"></div> -->
-                <!-- <a class="dropdown-item" href="#">Separated link</a> -->
-        </div>
-</div>        </div><div class="code-block">
-        <pre><code class="language-php">/* optional dropdown item keys: "href" =&gt; "javascript:;", "value" = 0 */
-echo Dropdown(
-  "Dynamic dropdown",
-  "dropdown-demo",
-  ["label" =&gt; "Option 1", "value" =&gt; 1],
-  ["label" =&gt; "Option 2", "value" =&gt; 2],
-  ["label" =&gt; "Option 3", "value" =&gt; 3],
-)</code></pre>
-</div>
+                                
                                 <h5 class="my-4">V - Navigation Components</h5>
 
                                 <h5 class="my-4">VI - Advanced Components</h5>
