[Glass] Rewrite dynamic properties using CSS variable

--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -21,16 +21,21 @@
                         <div class="container ">
                                 <h2 class="text-center p-3 highlight-color">Dynamic UI Framework</h2>
                                 <hr><br>
-                                <div class="code-block ">
-        <pre><code class="language-php">&lt;?= include_once "components/_index.php";?&gt;</code></pre>
+                                <div class="code-block wrapper ">
+        <pre class=""><code  class="language-php"   >&lt;?= include_once "dui/_index.php";?&gt;</code></pre>
 </div>
                                 <h5 class="my-4">I - Basic Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
-                          <div class='button-border  '>
-          <a href='javascript:;' class='button'  >Dynamic button</a>
-  </div>        </div><div class="code-block mt-3">
-        <pre><code class="language-php">Button(label: "Dynamic button")-&gt;show();</code></pre>
-</div>
+                          <div class='button-border wrapper  '>
+          <a href='javascript:;' class='button '  >Dynamic button</a>
+  </div>        </div><div class="code-block wrapper mt-3">
+        <pre class=""><code  class="language-php"   >Button(label: "Dynamic button")-&gt;show();</code></pre>
+</div><div class=" d-flex justify-content-center flex-row">
+                           <div class="form-item wrapper  ">
+           <div class="form-group">
+                   <input     type="text" class="form-control " >
+           </div>
+   </div>        </div>
                                 <h5 class="my-4">II - Container Components</h5>
 
                                 <h5 class="my-4">III - Content Components</h5>
