--- a/setting.html
+++ b/setting.html
@@ -1,7 +1,7 @@
 
 <div id="setting-section" class="setting-section">
         <div class="text-center setting-panel hide">
-                <div class=" title-bar">
+                <div class="title-bar wrapper">
         <div class="title-bar-text-wrapper scalable">Setting</div>
         <div class="title-bar-text scalable">Setting</div>
         <div class="title-bar-controls">
