[Component] Checkbox: change to OOP builder

--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -41,7 +41,14 @@
                                 <h5 class="my-4">III - Content Components</h5>
 
                                 <h5 class="my-4">IV - Form Components</h5>
-                                
+                                <div class=" d-flex justify-content-center flex-row">
+                        <div class="checkbox wrapper  ">
+        <input id="checkbox_dynamic-checkbox"  type="checkbox"  value="">
+        <label for="checkbox_dynamic-checkbox">
+                <i class="fas fa-check"></i>
+        </label>
+        <div class="name">Dynamic checkbox</div>
+</div>        </div>
                                 <h5 class="my-4">V - Navigation Components</h5>
 
                                 <h5 class="my-4">VI - Advanced Components</h5>
