--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -29,7 +29,7 @@
                           <div class='button-border wrapper  '>
           <a href='javascript:;' class='button '  >Dynamic button</a>
   </div>        </div><div class="code-block wrapper mt-3">
-        <pre class=""><code  class="language-php"   >Button(label: "Dynamic button")-&gt;show();</code></pre>
+        <pre class=""><code  class="language-php"   >Button(label: "Dynamic button") -&gt; show();</code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
                            <div class="form-item wrapper  ">
            <div class="form-group">
@@ -48,7 +48,9 @@
                 <i class="fas fa-check"></i>
         </label>
         <div class="name">Dynamic checkbox</div>
-</div>        </div>
+</div>        </div><div class="code-block wrapper mt-3">
+        <pre class=""><code  class="language-php"   >Checkbox(label: "Dynamic checkbox") -&gt; show();</code></pre>
+</div>
                                 <h5 class="my-4">V - Navigation Components</h5>
 
                                 <h5 class="my-4">VI - Advanced Components</h5>
