[WinXP] Setup files

--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -3,23 +3,21 @@
 
 <head>
         <title>Dyanmic UI Framework</title>
-
         <!-- META -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php">
-                                <meta name="revised" content="2021-08-12 12:10:31">
-                                
-
-        <!-- TODO: Use CDN for DUI css -->
+                                <meta name="revised" content="2021-08-12 15:57:01">
+                                        <!-- FONT PRELOAD -->
+        <!-- CSS -->
+        <!-- Todo: Use CDN for DUI css -->
         <link rel="stylesheet" href="/dui/css/dynamic-style.css" type="text/css">
-        <!-- TODO: Verify if sheets are in order -->
+        <!-- Todo: Verify if sheets are in order -->
         </head><!-- <head>
         <link rel="preload" href="../fonts/agency-fb-regular/AgencyFB-Reg.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="../fonts/agency-fb-bold/AgencyFB-Bold.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="stylesheet" href="../css/dynamic-style.css" type="text/css" />
 </head> -->
 
 <body class="neu-style ">
