[WinXP] Add CSS custom properties

--- a/setting.html
+++ b/setting.html
@@ -25,6 +25,7 @@
                                         <a class="dropdown-item" href="javascript:;" value="flat-style">Flat</a>
                                         <a class="dropdown-item" href="javascript:;" value="nes-style">NES - Pixel</a>
                                         <a class="dropdown-item" href="javascript:;" value="win98-style">Windows 98</a>
+                                        <a class="dropdown-item" href="javascript:;" value="winxp-style">Windows XP</a>
                                         <a class="dropdown-item" href="javascript:;" value="neu-style">Neumorphism</a>
                                         <a class="dropdown-item" href="javascript:;" value="glass-style">Glassmorphism</a>
                                 <!-- <div class="dropdown-divider"></div> -->
