--- a/setting.html
+++ b/setting.html
@@ -219,6 +219,7 @@
                                         <a class="dropdown-item" href="javascript:;" value="0">Linear gradient</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Vanishing stripes</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Windows98</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">WindowsXP</a>
                                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
@@ -242,6 +243,7 @@
                                         <a class="dropdown-item" href="javascript:;" value="0">Linear gradient</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Vanishing stripes</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Windows98</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">WindowsXP</a>
                                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
