--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -9,7 +9,7 @@
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php">
-                                <meta name="revised" content="2021-08-12 16:01:03">
+                                <meta name="revised" content="2021-08-12 17:45:47">
                                         <!-- FONT PRELOAD -->
         <!-- CSS -->
         <!-- Todo: Use CDN for DUI css -->
@@ -33,7 +33,7 @@
 </div>
                                 <h5 class="my-4">I - Basic Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
-                          <div class='button-border wrapper  '>
+                          <div class='button-border button-wrapper wrapper  '>
           <a href='javascript:;' class='button '  >Dynamic button</a>
   </div>        </div><div class="code-block wrapper mt-3">
         <pre class=""><code  class="language-php"   >Button(label: "Dynamic button") -&gt; show();</code></pre>
