[Snippet] Head: Initializer for scheme & highlight color

--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -3,19 +3,26 @@
 
 <head>
         <title>Dyanmic UI Framework</title>
+
         <!-- META -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php">
-                                <meta name="revised" content="2021-08-12 20:11:59">
-                                        <!-- FONT PRELOAD -->
+                                <meta name="revised" content="2021-08-12 21:22:00">
+                                
+        <!-- FONT PRELOAD -->
+
         <!-- CSS -->
         <!-- Todo: Use CDN for DUI css -->
         <link rel="stylesheet" href="/dui/css/dynamic-style.css" type="text/css">
         <!-- Todo: Verify if sheets are in order -->
-        </head><!-- <head>
+                <style>
+                :root {
+                        --highlight-color: 235, 64, 52                 }
+        </style>
+</head><!-- <head>
         <link rel="preload" href="../fonts/agency-fb-regular/AgencyFB-Reg.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="../fonts/agency-fb-bold/AgencyFB-Bold.woff2" as="font" type="font/woff2" crossorigin>
 </head> -->
