--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -9,8 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
-                                <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php">
-                                <meta name="revised" content="2021-08-12 21:22:00">
+                                <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
+                                <meta name="revised" content="2021-08-12 21:55:02">
                                 
         <!-- FONT PRELOAD -->
 
