--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -10,7 +10,7 @@
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
-                                <meta name="revised" content="2021-08-12 21:55:02">
+                                <meta name="revised" content="2021-08-13 20:12:36">
                                 
         <!-- FONT PRELOAD -->
 
@@ -56,6 +56,15 @@
 
                                 <h5 class="my-4">IV - Form Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
+                                <label class="toggle-label wrapper toggle-wrapper  ">
+                <div class="toggle" id="toggle_dynamic-toggle">
+                        <input class="toggle-state  " type="checkbox"  value="" />
+                        <div class="indicator"></div>
+                </div>
+                <div class="label-text">Dynamic toggle</div>
+        </label>        </div><div class="code-block wrapper mt-3">
+        <pre class=""><code  class="language-php"   >Toggle(label: "Dynamic toggle") -&gt; show();</code></pre>
+</div><div class=" d-flex justify-content-center flex-row">
                         <div class="checkbox wrapper  ">
         <input id="checkbox_dynamic-checkbox"  type="checkbox"  value="">
         <label for="checkbox_dynamic-checkbox">
