--- a/setting.html
+++ b/setting.html
@@ -253,13 +253,13 @@
                         </div>
 
                         <div class="setting-save-panel">
-                                <label class="toggle-label">
-        <div class="toggle" id="setting-save-button">
-                <input class="toggle-state" type="checkbox" name="save" value="0" />
-                <div class="indicator"></div>
-        </div>
-        <div class="label-text">Save</div>
-</label>                                <!-- TODO: Random button-->
+                                        <label class="toggle-label wrapper toggle-wrapper ">
+                <div class="toggle" id="toggle_save">
+                        <input class="toggle-state  " type="checkbox"  value="" />
+                        <div class="indicator"></div>
+                </div>
+                <div class="label-text">Save</div>
+        </label>                                <!-- TODO: Random button-->
                         </div>
                 </div>
         </div>
