--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -10,7 +10,7 @@
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
-                                <meta name="revised" content="2021-08-13 20:56:54">
+                                <meta name="revised" content="2021-08-13 21:14:22">
                                 
         <!-- FONT PRELOAD -->
 
@@ -44,18 +44,20 @@
           <a href='javascript:;' class='button '  >Dynamic button</a>
   </div>        </div><div class="code-block wrapper mt-3">
         <pre class=""><code  class="language-php"   >Button(label: "Dynamic button") -&gt; show();</code></pre>
-</div><div class=" d-flex justify-content-center flex-row">
-                           <div class="form-item wrapper  ">
-           <div class="form-group">
-                   <input     type="text" class="form-control " >
-           </div>
-   </div>        </div>
+</div>
                                 <h5 class="my-4">II - Container Components</h5>
 
                                 <h5 class="my-4">III - Content Components</h5>
 
                                 <h5 class="my-4">IV - Form Components</h5>
                                 <div class=" d-flex justify-content-center flex-row">
+                           <div class="form-item wrapper  ">
+           <div class="form-group">
+                   <input     type="text" class="form-control " >
+           </div>
+   </div>        </div><div class="code-block wrapper mt-3">
+        <pre class=""><code  class="language-php"   >Input() -&gt; show();</code></pre>
+</div><div class=" d-flex justify-content-center flex-row">
                         <div class='dui-radio wrapper radio-wrapper  '>
         <input class='state' type='radio'  name='Group 1' id='radio_radio-1' value=''>
         <label class='label ' for='radio_radio-1'>
