[Core] Migrate to Bootstrap 5

--- a/setting.html
+++ b/setting.html
@@ -17,7 +17,7 @@
         <button type="button" class="dropdown-label">
                 <p class="scalable">Select style</p>
         </button>
-        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
@@ -167,7 +167,7 @@
         <button type="button" class="dropdown-label">
                 <p class="scalable">Agency FB</p>
         </button>
-        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
@@ -206,7 +206,7 @@
         <button type="button" class="dropdown-label">
                 <p class="scalable">None</p>
         </button>
-        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
@@ -230,7 +230,7 @@
         <button type="button" class="dropdown-label">
                 <p class="scalable">None</p>
         </button>
-        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
