Rename highlight color to primary color

--- a/setting.html
+++ b/setting.html
@@ -127,7 +127,7 @@
                                         <p class="option-label">Colour</p>
                                         <div class="row px-4">
                                                 <div class="col-6 p-0">
-                                                        <label for="highlight-color-picker">Highlight</label>
+                                                        <label for="highlight-color-picker">Primary</label>
                                                         <input type="color" id="highlight-color-picker" value="#0000ff">
                                                 </div>
                                                 <div class="col-6 p-0">
