--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -10,17 +10,17 @@
                         <meta name="author" content="enginoobz">
                                 <meta name="description" content="Demo page for Dynamic UI Framework">
                                 <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
-                                <meta name="revised" content="2021-08-17 04:45:27">
+                                <meta name="revised" content="2021-08-17 17:59:53">
                                 
         <!-- FONT PRELOAD -->
 
         <!-- CSS -->
-        <!-- Todo: Use CDN for DUI css -->
+        <!-- TODO: Use CDN for DUI css -->
         <link rel="stylesheet" href="/dui/css/dynamic-style.css" type="text/css">
-        <!-- Todo: Verify if sheets are in order -->
+        <!-- TODO: Verify if sheets are in order -->
                 <style>
                 :root {
-                        --highlight-color: 235, 64, 52                 }
+                                        }
         </style>
 </head><!-- <head>
         <link rel="preload" href="../fonts/agency-fb-regular/AgencyFB-Reg.woff2" as="font" type="font/woff2" crossorigin>
@@ -32,7 +32,7 @@
                 
         <div class="display-table">
                 <div class="display-content ">
-                        <div class="container ">
+                        <div class="container none-bg ">
                                 <h2 class="text-center p-3 highlight-color">Dynamic UI Framework</h2>
                                 <hr><br>
                                 <div class="code-block wrapper ">
