[Neu] Re-write dynamic class based on new CSS vars

--- a/setting.html
+++ b/setting.html
@@ -68,7 +68,7 @@
                 <span class='range-slider__value'>-20</span>
         </div>
                                                 <p>Border style</p>
-                                                <div class="radio-group-wrapper">
+                                                <div class="radio-group-wrapper neu-border-style-options">
                                                         <div class='dui-radio wrapper radio-wrapper '>
         <input class='state' type='radio'  name='neu-border-style' id='solid-border' value='0'>
         <label class='label ' for='solid-border'>
