--- a/demo/index-raw.html
+++ b/demo/index-raw.html
@@ -7,115 +7,166 @@
   <!-- META -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <meta name="author" content="enginoobz">
-  <meta name="description" content="Demo page for Dynamic UI Framework">
-  <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
-  <meta name="revised" content="2021-08-19 20:32:08">
-
+      <meta name="author" content="enginoobz">
+        <meta name="description" content="Demo page for Dynamic UI Framework">
+        <meta name="keywords" content="ui, dynamic, bootstrap, framework, jquery, php, flat, nes, pixel, windows, neumorphism, glassmorphism">
+        <meta name="revised" content="2022-09-02 09:57:25">
+        
   <!-- FONT PRELOAD -->
 
   <!-- CSS -->
   <!-- TODO: Use CDN for DUI css -->
   <link rel="stylesheet" href="/dui/css/dynamic-style.css" type="text/css">
   <!-- TODO: Verify if sheets are in order -->
-  <style>
-    :root {}
+    <style>
+    :root {
+          }
   </style>
-</head>
-<!-- <head>
+</head><!-- <head>
         <link rel="preload" href="../fonts/agency-fb-regular/AgencyFB-Reg.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="../fonts/agency-fb-bold/AgencyFB-Bold.woff2" as="font" type="font/woff2" crossorigin>
 </head> -->
 
 <body class="neu-style ">
   <!-- TODO: Add preloader to hide FOUC + Use a few indentical CSS as loading style sheet (e.g. Bootstrap) to reduce FOUC-->
-
-  <div class="display-table">
-    <div class="display-content ">
-      <div class="container none-bg ">
-        <h2 class="text-center p-3 highlight-color">Dynamic UI Framework</h2>
-        <hr><br>
-        <div class="code-block wrapper ">
-          <pre class=""><code  class="language-php"   >&lt;?= include_once "dui/_index.php";?&gt;</code></pre>
-        </div>
-        <h5 class="my-4">I - Basic Components</h5>
-        <div class=" d-flex justify-content-center flex-row">
-          <div class='button-border button-wrapper wrapper  '>
-            <a href='javascript:;' class='button ' id='btn1'>Dynamic button</a>
-          </div>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-php"   >Button(label: "Dynamic button",  id: "btn1") -&gt; show();</code></pre>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-ts"   >const btn1 = Button("btn1")
+  
+<div class="display-table">
+  <div class="display-content ">
+    <div class="container none-bg ">
+      <h2 class="text-center p-3 highlight-color">Dynamic UI Framework</h2>
+      <hr><br>
+      <div class="code-block wrapper ">
+  <pre class=""><code  class="language-php"   >&lt;?= include_once "dui/_index.php";?&gt;</code></pre>
+</div>
+      <h5 class="my-4">I - Basic Components</h5>
+      <div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+              <div class='button-border button-wrapper wrapper  '>
+    <a href='javascript:;' class='button ' id='btn1' >Dynamic button</a>
+  </div>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >Button(label: "Dynamic button",  id: "btn1") -&gt; show();</code></pre>
+</div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-ts"   >const btn1 = Button("btn1")
 btn1.onClick = event =&gt; alert(`Hi! I am ${btn1.label}`)</code></pre>
-        </div>
-        <h5 class="my-4">II - Container Components</h5>
+</div>
+      <h5 class="my-4">II - Container Components</h5>
 
-        <h5 class="my-4">III - Content Components</h5>
+      <h5 class="my-4">III - Content Components</h5>
 
-        <h5 class="my-4">IV - Form Components</h5>
-        <div class=" d-flex justify-content-center flex-row">
-          <div class="form-item wrapper  ">
-            <div class="form-group">
-              <input type="text" class="form-control ">
-            </div>
-          </div>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-php"   >Input() -&gt; show();</code></pre>
-        </div>
-        <div class=" d-flex justify-content-center flex-row">
-          <div class='dui-radio wrapper radio-wrapper  '>
-            <input class='state' type='radio' name='Group 1' id='radio_radio-1' value=''>
-            <label class='label ' for='radio_radio-1'>
-              <div class='indicator'></div>
-              <span class='text'>Radio 1</span>
-            </label>
-          </div>
-          <div class='dui-radio wrapper radio-wrapper  '>
-            <input class='state' type='radio' checked name='Group 1' id='radio_radio-2' value=''>
-            <label class='label ' for='radio_radio-2'>
-              <div class='indicator'></div>
-              <span class='text'>Radio 2</span>
-            </label>
-          </div>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-php"   >Radio(label: "Radio 1", group: "Group 1") -&gt; show();
+      <h5 class="my-4">IV - Form Components</h5>
+      <div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+               <div class="form-item wrapper  ">
+     <div class="form-group">
+       <input     type="text" class="form-control " >
+     </div>
+   </div>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >Input() -&gt; show();</code></pre>
+</div><div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+            <div class='dui-radio wrapper radio-wrapper  '>
+  <input class='state' type='radio'  name='Group 1' id='radio_radio-1' value=''>
+  <label class='label ' for='radio_radio-1'>
+    <div class='indicator'></div>
+    <span class='text'>Radio 1</span>
+  </label>
+</div>                <div class='dui-radio wrapper radio-wrapper  '>
+  <input class='state' type='radio' checked name='Group 1' id='radio_radio-2' value=''>
+  <label class='label ' for='radio_radio-2'>
+    <div class='indicator'></div>
+    <span class='text'>Radio 2</span>
+  </label>
+</div>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >Radio(label: "Radio 1", group: "Group 1") -&gt; show();
 Radio(label: "Radio 2", group: "Group 1", checked: true) -&gt; show();</code></pre>
-        </div>
-        <div class=" d-flex justify-content-center flex-row">
-          <label class="toggle-label wrapper toggle-wrapper  ">
-            <div class="toggle" id="toggle_dynamic-toggle">
-              <input class="toggle-state  " type="checkbox" value="" />
-              <div class="indicator"></div>
-            </div>
-            <div class="label-text">Dynamic toggle</div>
-          </label>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-php"   >Toggle(label: "Dynamic toggle") -&gt; show();</code></pre>
-        </div>
-        <div class=" d-flex justify-content-center flex-row">
-          <div class="checkbox wrapper  ">
-            <input id="checkbox_dynamic-checkbox" type="checkbox" value="">
-            <label for="checkbox_dynamic-checkbox">
-              <i class="fas fa-check"></i>
-            </label>
-            <div class="name">Dynamic checkbox</div>
+</div><div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+                    <label class="toggle-label wrapper toggle-wrapper  ">
+          <div class="toggle" id="toggle_dynamic-toggle">
+            <input class="toggle-state  " type="checkbox"  value="" />
+            <div class="indicator"></div>
           </div>
-        </div>
-        <div class="code-block wrapper mt-3">
-          <pre class=""><code  class="language-php"   >Checkbox(label: "Dynamic checkbox") -&gt; show();</code></pre>
-        </div>
-        <h5 class="my-4">V - Navigation Components</h5>
-
-        <h5 class="my-4">VI - Advanced Components</h5>
-      </div>
+          <div class="label-text">Dynamic toggle</div>
+        </label>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >Toggle(label: "Dynamic toggle") -&gt; show();</code></pre>
+</div><div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+            <div class="checkbox wrapper  ">
+  <input id="checkbox_dynamic-checkbox"  type="checkbox"  value="">
+  <label for="checkbox_dynamic-checkbox">
+    <i class="fas fa-check"></i>
+  </label>
+  <div class="name">Dynamic checkbox</div>
+</div>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >Checkbox(label: "Dynamic checkbox") -&gt; show();</code></pre>
+</div>
+      <h5 class="my-4">V - Navigation Components</h5>
+      <div class=" d-flex justify-content-center flex-row flex-basis-0pc">
+            <nav class="sidebar neu-style-1 d-flex justify-content-center flex-column flex-basis-0pc">
+  <ul class="side-nav">
+          <li class='side-nav__item '>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-home'></use>
+          </svg>
+                      <span class='side-nav__label'>Hotel</span>
+                  </a>
+      </li>
+          <li class='side-nav__item side-nav__item--active'>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-aircraft-take-off'></use>
+          </svg>
+                      <span class='side-nav__label'>Flight</span>
+                  </a>
+      </li>
+          <li class='side-nav__item '>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-map'></use>
+          </svg>
+                      <span class='side-nav__label'>Tours</span>
+                  </a>
+      </li>
+      </ul>
+  <div class="legal">&copy;2021 by enginoobz. All rights reserved.</div>
+</nav>                <nav class="sidebar neu-style-2 d-flex justify-content-center flex-column flex-basis-0pc">
+  <ul class="side-nav">
+          <li class='side-nav__item '>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-home'></use>
+          </svg>
+                  </a>
+      </li>
+          <li class='side-nav__item side-nav__item--active'>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-aircraft-take-off'></use>
+          </svg>
+                  </a>
+      </li>
+          <li class='side-nav__item '>
+        <a href='javascript:;' class='side-nav__link'>
+          <svg class='side-nav__icon'>
+            <use href='img/sprite.svg#icon-map'></use>
+          </svg>
+                  </a>
+      </li>
+      </ul>
+  <div class="legal">&copy;2021 by enginoobz. All rights reserved.</div>
+</nav>      </div><div class="code-block wrapper mt-3">
+  <pre class=""><code  class="language-php"   >SidebarFlex()
+    -&gt;Item(label: "Hotel", icon: "$sprite#icon-home")
+    -&gt;Item(label: "Flight", icon: "$sprite#icon-aircraft-take-off", isActive: true)
+    -&gt;Item(label: "Tours", icon: "$sprite#icon-map")
+    -&gt;show();
+    
+SidebarFlex(class: "neu-style-2")
+    -&gt;Item(icon: "$sprite#icon-home")
+    -&gt;Item(icon: "$sprite#icon-aircraft-take-off", isActive: true)
+    -&gt;Item(icon: "$sprite#icon-map")
+    -&gt;show();</code></pre>
+</div>
+      <h5 class="my-4">VI - Advanced Components</h5>
     </div>
   </div>
+</div>
   <script src="./index.js" type="module"></script>
   <script async src="../js/main.js" type="module"></script>
 </body>
